--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
   <!--[if IE]>
@@ -36,7 +37,7 @@
 		<div class="container">
       <div class="copy">
         <h1>Message Box is a design experiment with memory and time 
-          <a href="#b1"><i class="fa fa-long-arrow-right"></i></a></h1>
+          <a href="#" onclick="scrollToNext()"><i class="fa fa-long-arrow-right"></i></a></h1>
        </div>
        </div>
   </div>  
@@ -46,7 +47,7 @@
     data-1600-start="opacity: 0; visibility: hidden;">
     <div class="container">
       <div class="copy">
-       <p><a href="#b2">First, place the Message Box in your living space <i class="fa fa-long-arrow-right"></i></a></p>
+       <p><a href="#" onclick="scrollToNext()">First, place the Message Box in your living space <i class="fa fa-long-arrow-right"></i></a></p>
       </div>
     </div>
   </div>  
@@ -61,7 +62,7 @@
 
 		<div class="container">
       <div class="copy">
-      <p><a href="#b3">Over time, it becomes a familiar object. <br />You stop noticing it <i class="fa fa-long-arrow-right"></i></a></p>
+      <p><a href="#" onclick="scrollToNext()">Over time, it becomes a familiar object. <br />You stop noticing it <i class="fa fa-long-arrow-right"></i></a></p>
       </div>
     </div>
   </div>  
@@ -76,7 +77,7 @@
 
 		<div class="container">
       <div class="copy">
-      <p><a href="#b4">Meanwhile, the Message Box is randomly recording the voices in your home <i class="fa fa-long-arrow-right"></i></a></p>
+      <p><a href="#" onclick="scrollToNext()">Meanwhile, the Message Box is randomly recording the voices in your home <i class="fa fa-long-arrow-right"></i></a></p>
       </div>
     </div>
   </div>  
@@ -87,7 +88,7 @@
     data-4000-start="opacity: 0; visibility: hidden;">
 		<div class="container">
       <div class="copy">
-      <p><a href="#c">One day, something makes you notice the Message Box again <i class="fa fa-long-arrow-right"></i></a></p>
+      <p><a href="#" onclick="scrollToNext()">One day, something makes you notice the Message Box again <i class="fa fa-long-arrow-right"></i></a></p>
       </div>
     </div>  
   </div>  
@@ -99,7 +100,7 @@
     data-4800-start="opacity: 0; visibility: hidden;">
     <div class="container">
       <div class="copy">
-        <p class="next"><a href="#d"><i class="fa fa-long-arrow-right"></i></a></p>
+        <p class="next"><a href="#" onclick="scrollToNext()"><i class="fa fa-long-arrow-right"></i></a></p>
         </div> 
     </div>  
     </div> 
@@ -109,7 +110,7 @@
     data-5600-start="opacity: 0; visibility: hidden;">
     <div class="container">
       <div class="copy">
-        <p class="next"><a href="#e1"><i class="fa fa-long-arrow-right"></i></a></p>
+        <p class="next"><a href="#" onclick="scrollToNext()"><i class="fa fa-long-arrow-right"></i></a></p>
         </div> 
     </div>  
   </div> 
@@ -122,7 +123,7 @@
     data-6400-start="opacity: 0; visibility: hidden;">
     <div class="container">
       <div class="copy">
-        <p><a href="#e2">A hidden speaker randomly replays the voice recordings of your past <i class="fa fa-long-arrow-right"></i></a></p>
+        <p><a href="#" onclick="scrollToNext()">A hidden speaker randomly replays the voice recordings of your past <i class="fa fa-long-arrow-right"></i></a></p>
         </div> 
     </div>  
   </div>  
@@ -132,7 +133,7 @@
     data-7200-start="opacity: 0; visibility: hidden;">
 		<div class="container">
       <div class="copy">
-       <p><a href="#e3">Perhaps the Message Box sends you the voice of an old friend, an ex-lover, a deceased loved one <i class="fa fa-long-arrow-right"></i></a></p>
+       <p><a href="#" onclick="scrollToNext()">Perhaps the Message Box sends you the voice of an old friend, an ex-lover, a deceased loved one <i class="fa fa-long-arrow-right"></i></a></p>
         </div> 
     </div>  
   </div>  
@@ -142,7 +143,7 @@
     data-8000-start="opacity: 0; visibility: hidden;">
 		<div class="container">
       <div class="copy">
-      <p><a href="#f">A random moment from your past can change your future <i class="fa fa-long-arrow-down right"></i></a></p>
+      <p><a href="#" onclick="scrollToNext()">A random moment from your past can change your future <i class="fa fa-long-arrow-down right"></i></a></p>
       </div> 
     </div>  
   </div>  
