Set behaviour of info link

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <nav>
   <div class="container">
     <div class="copy">
-      <a href="#b1">how it works</a>
-      <a href="#f" onclick="showInfo()">info</a>
+      <a class="info-link" href="#" onclick="showInfo()">info</a>
     </div>
   </div>
 </nav>
