Advance to the next panel clicking anywhere in the panel

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="m-b"> </div>
     <div class="marlene"> </div>
 
-    <div class="panel a header">
+    <div class="panel a header" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <h1><a href="#" onclick="scrollToNext()">Message Box is a design experiment with memory and time <i class="fa fa-long-arrow-right"></i></a></h1>
@@ -42,7 +42,7 @@
 
   
 
-  <div class="panel b1">
+  <div class="panel b1" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">Place the Message Box in your living space.</a></p>
@@ -52,7 +52,7 @@
   </div>    
   
 
-  <div class="panel b2">
+  <div class="panel b2" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">Over time, it becomes a familiar object, and you stop noticing it.</a></p>
@@ -62,7 +62,7 @@
   </div>  
   
 
-  <div class="panel b3">
+  <div class="panel b3" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">Meanwhile, the Message Box is randomly recording the voices in your home. </a></p>
@@ -72,7 +72,7 @@
   </div>  
   
   
-  <div class="panel b4 dark">
+  <div class="panel b4 dark" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">One day, you might remember the Message Box again.</a></p>
@@ -83,7 +83,7 @@
   
   
   <!-- no text -->
-  <div class="panel c">
+  <div class="panel c" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p class="nav nav-only"><a href="#" onclick="scrollToPrevious()"><i class="fa fa-long-arrow-left"></i> <a href="#" onclick="scrollToNext()"><i class="fa fa-long-arrow-right"></i></a></p>
@@ -91,7 +91,7 @@
     </div>  
     </div> 
 
-  <div class="panel c2">
+  <div class="panel c2" onclick="scrollToNext()">
   <div class="container">
     <div class="copy">
       <p class="nav nav-only"><a href="#" onclick="scrollToPrevious()"><i class="fa fa-long-arrow-left"></i> <a href="#" onclick="scrollToNext()"><i class="fa fa-long-arrow-right"></i></a></p>
@@ -99,7 +99,7 @@
   </div>  
   </div> 
   
-  <div class="panel d">
+  <div class="panel d" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p class="nav nav-only"><a href="#" onclick="scrollToPrevious()"><i class="fa fa-long-arrow-left"></i> <a href="#" onclick="scrollToNext()"><i class="fa fa-long-arrow-right"></i></a></p>
@@ -109,7 +109,7 @@
 
   
   
-  <div class="panel e1">
+  <div class="panel e1" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">After removing the lid, the Message Box replays the voice recordings of your past.</a></p>
@@ -118,7 +118,7 @@
     </div>  
   </div>  
   
-  <div class="panel e2">
+  <div class="panel e2" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
        <p><a href="#" onclick="scrollToNext()">Perhaps the laugh of an old roommate, an argument with an ex-partner or loud voices from a house party</a></p>
@@ -127,7 +127,7 @@
     </div>  
   </div>  
   
-  <div class="panel e3 dark">
+  <div class="panel e3 dark" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">These random memories might make you smile, perhaps with a hint of nostalgia. </a></p>
@@ -137,7 +137,7 @@
     </div>  
   </div>  
   
-  <div class="f info static">
+  <div class="f info static" >
       <div class="container">
 
         <p><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_5.jpg" alt="tech" /></p>
