Video link opens a new tab

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<h1>INFO</h1>
          <p>Message Box is a design experiment with time and memory. It is an exploration of a long-term interaction with an object, employing technology to subtly enrich the ordinary aspects of our everyday lives.</p>
 
-        <p><a href="http://vimeo.com/116183361">Watch the video <i class="fa fa-play-circle-o"></i> </a></p>
+        <p><a href="http://vimeo.com/116183361" target="_blank">Watch the video <i class="fa fa-play-circle-o"></i> </a></p>
         
         
         <h2>Design</h2>
