--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.5.8/perfect-scrollbar.min.js"></script>
 
+<script src="js/libs/imagesloaded.pkgd.min.js"></script>
+
 <script src="js/script.js"></script>
 
 
