--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <nav>
   <div class="container">
-    <a class="home arrow" href="#" onclick="">Home</a>
+    <a class="home arrow" href="#" onclick="goHome()">Home</a>
     <a href="#" class="arrow" onclick="scrollToPrevious()"><i class="fa fa-long-arrow-up fa-2x"></i></a>
     <a href="#" class="arrow" onclick="scrollToNext()"><i class="fa fa-long-arrow-down fa-2x"></i></a>
     <a class="info-link" href="#" onclick="showInfo()">Info</a>
