Hidded nav arrows and home button when on info panel

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a class="home arrow" href="#" onclick="goHome()">Home</a>
     <a href="#" class="arrow" onclick="scrollToPrevious()"><i class="fa fa-long-arrow-up fa-2x"></i></a>
     <a href="#" class="arrow" onclick="scrollToNext()"><i class="fa fa-long-arrow-down fa-2x"></i></a>
-    <a class="info-link" href="#" onclick="showInfo()">Info</a>
+    <a class="info-link arrow" href="#" onclick="showInfo()">Info</a>
   </div>
 </nav>
   
