--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
 
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
