--- a/index.html
+++ b/index.html
@@ -125,10 +125,21 @@
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">These random memories might make you smile, perhaps with a hint of nostalgia. </a></p>
-        <p class="second"><a href="#" onclick="scrollToNext()">But an encounter with these unexpected moment could change your future.</a></p>
+<!--         <p class="second"><a href="#" onclick="scrollToNext()">But an encounter with these unexpected moment could change your future.</a></p> -->
       </div> 
     </div>  
   </div>  
+
+  <div class="panel e4 dark" onclick="scrollToNext()">
+    <div class="container">
+      <div class="copy">
+        <p><a href="#" onclick="scrollToNext()">But an encounter with these unexpected moment could change your future.</a></p>
+      </div> 
+    </div>  
+  </div>  
+
+
+
   
   <div class="f info static" >
     <div class="scroll-container">
