--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         
         <div class="footer">
           <p> &copy;  Fabrica 2015. Designed by <a href="http://orgonomyproductions.info" target="_blank">Leonardo Amico</a> & <a href="http://ryu-yamamoto.com" target="_blank">Ryu Yamamoto</a>. Website by <a href="http://www.sarahriazati.com" target="_blank">Sarah Riazati</a>. Photographs by <a href="http://www.shekpokwan.com" target="_blank">Shek Po Kwan</a>. Illustrations by <a href="http://www.ferreolbabin.fr"  target="_blank">Ferr&eacuteol Babin</a>.</p>
-          <p><a href="http://www.fabrica.it" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/Fabrica_logo_blk.png" /></a> is a communication research centre. It is based in Treviso, Italy, and is an integral part of the Benetton Group. </p>
+          <p><a href="http://www.fabrica.it" target="_blank"><img class="fabrica-logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/Fabrica_logo_blk.png" /></a> is a communication research centre. It is based in Treviso, Italy, and is an integral part of the Benetton Group. </p>
         </div>
       </div>
     </div>
