Added meta for characters rendering and changed Ferréol name copy

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
 <head>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-
-
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>Message Box - A design experiment with memory and time</title>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" media="screen" charset="utf-8"/>
+<head>
+
+  
+
+
+  
+
   <!--[if IE]>
       <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
@@ -161,7 +172,7 @@
         
         
         <div class="footer">
-          <p> &copy;  Fabrica 2015. Designed by <a href="http://orgonomyproductions.info" target="_blank">Leonardo Amico</a> & <a href="http://ryu-yamamoto.com" target="_blank">Ryu Yamamoto</a>. Website by <a href="http://www.sarahriazati.com" target="_blank">Sarah Riazati</a>. Photographs by <a href="http://www.shekpokwan.com" target="_blank">Shek Po Kwan</a>. Illustrations by <a href="http://www.ferreolbabin.fr"  target="_blank">Ferr&eacuteol Babin</a>.</p>
+          <p> &copy;  Fabrica 2015. Designed by <a href="http://orgonomyproductions.info" target="_blank">Leonardo Amico</a> & <a href="http://ryu-yamamoto.com" target="_blank">Ryu Yamamoto</a>. Website by <a href="http://www.sarahriazati.com" target="_blank">Sarah Riazati</a>. Photographs by <a href="http://www.shekpokwan.com" target="_blank">Shek Po Kwan</a>. Illustrations by <a href="http://www.ferreolbabin.fr"  target="_blank">Ferréol Babin</a>.</p>
           <p><a href="http://www.fabrica.it" target="_blank"><img class="fabrica-logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/Fabrica_logo_blk.png" /></a> is a communication research centre. It is based in Treviso, Italy, and is an integral part of the Benetton Group. </p>
         </div>
       </div>
