Adapted project for using Grunt

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Message Box - A design experiment with memory and time</title>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" media="screen" charset="utf-8"/>
+  <link href="css/global.css" media="screen, projection" rel="stylesheet" type="text/css" />
 <head>
 
   
@@ -198,7 +197,7 @@
 
 <script src="js/libs/imagesloaded.pkgd.min.js"></script>
 
-<script src="js/script.js"></script>
+<script src="js/production.min.js"></script>
 
 
 </body>
