--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <div class="panel e4 dark" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
-        <p><a href="#" onclick="scrollToNext()">But an encounter with these unexpected moment could change your future.</a></p>
+        <p><a href="#" onclick="scrollToNext()">But an encounter with these unexpected moments could change your future.</a></p>
       </div> 
     </div>  
   </div>  
@@ -173,7 +173,7 @@
         <p>The project is a collaboration between <a href="http://orgonomyproductions.info" target="_blank">Leonardo Amico</a> and <a href="http://ryu-yamamoto.com" target="_blank">Ryu Yamamoto</a></p>
         
         <div class="footer">
-          <p> &copy;  Fabrica 2015. Website by <a href="http://www.sarahriazati.com" target="_blank">Sarah Riazati</a>. Photographs by <a href="http://www.shekpokwan.com" target="_blank">Shek Po Kwan</a>. Illustrations by <a href="http://www.ferreolbabin.fr"  target="_blank">Ferréol Babin</a>.</p>
+          <p> &copy;  Fabrica 2015. Website by <a href="http://www.sarahriazati.com" target="_blank">Sarah Riazati</a>. Photographs by <a href="http://www.shekpokwan.com" target="_blank">Shek Po Kwan</a>. Illustrations by <a href="http://www.ferreolbabin.fr"  target="_blank">Ferréol Babin</a>. Modeling by <a href="http://www.marlenewolfmair.com" target="_blank">Marlene Wolfmail</a>.</p>
           <p><a href="http://www.fabrica.it" target="_blank"><img class="fabrica-logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/Fabrica_logo_blk.png" /></a> is a communication research centre. It is based in Treviso, Italy, and is an integral part of the Benetton Group. </p>
         </div>
       </div>
