--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Message Box - A design experiment with memory and time</title>
+
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/global.css" media="screen, projection" rel="stylesheet" type="text/css" />
+
+  <title>Message Box - A design experiment with memory and time</title>
+  <meta name="description" content="The Message Box is a design experiment in memory and time, from Fabrica researchers Leonardo Amico & Ryu Yamamoto.">
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" value="summary">
+
+  <!-- Open Graph data -->
+  <meta property="og:site_name" content="Message Box" />
+  <meta property="og:title" content="Message Box" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="URL HERE" />
+  <meta property="og:image" content="LINK TO MB IMAGE" />
+  <meta property="og:description" content="The Message Box is a design experiment in memory and time, from Fabrica researchers Leonardo Amico & Ryu Yamamoto." />
 <head>
 
   
