--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <p>The project is a collaboration between <a href="http://orgonomyproductions.info" target="_blank">Leonardo Amico</a> and <a href="http://ryu-yamamoto.com" target="_blank">Ryu Yamamoto</a></p>
         
         <div class="footer">
-          <p> &copy;  Fabrica 2015. Website by <a href="http://www.sarahriazati.com" target="_blank">Sarah Riazati</a>. Photographs by <a href="http://www.shekpokwan.com" target="_blank">Shek Po Kwan</a>. Illustrations by <a href="http://www.ferreolbabin.fr"  target="_blank">Ferréol Babin</a>. Modeling by <a href="http://www.marlenewolfmair.com" target="_blank">Marlene Wolfmail</a>.</p>
+          <p> &copy;  Fabrica 2015. Website by <a href="http://www.sarahriazati.com" target="_blank">Sarah Riazati</a>. Photographs by <a href="http://www.shekpokwan.com" target="_blank">Shek Po Kwan</a>. Illustrations by <a href="http://www.ferreolbabin.fr"  target="_blank">Ferréol Babin</a>. Modeling by <a href="http://www.marlenewolfmair.com" target="_blank">Marlene Wolfmair</a>.</p>
           <p><a href="http://www.fabrica.it" target="_blank"><img class="fabrica-logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/Fabrica_logo_blk.png" /></a> is a communication research centre. It is based in Treviso, Italy, and is an integral part of the Benetton Group. </p>
         </div>
       </div>
