Restored last text displaying in two phases in the same panel - added media query for setting space between panels for small widths

--- a/index.html
+++ b/index.html
@@ -149,18 +149,18 @@
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">These random memories might make you smile, maybe with a hint of nostalgia. </a></p>
-<!--         <p class="second"><a href="#" onclick="scrollToNext()">But an encounter with these unexpected moment could change your future.</a></p> -->
+        <p class="second"><a href="#" onclick="scrollToNext()">But an encounter with these unexpected moment could change your future.</a></p>
       </div> 
     </div>  
   </div>  
 
-  <div class="panel e4 dark" onclick="scrollToNext()">
+<!--   <div class="panel e4 dark" onclick="scrollToNext()">
     <div class="container">
       <div class="copy">
         <p><a href="#" onclick="scrollToNext()">But an encounter with these unexpected moments could change your future.</a></p>
       </div> 
     </div>  
-  </div>  
+  </div>   -->
 
 
 
