Added email contact

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <p><img src="img/mb_tech.jpg" alt="technology message box" ></p>
         
-        <p>The project is a collaboration between <a href="http://orgonomyproductions.info" target="_blank">Leonardo Amico</a> and <a href="http://ryu-yamamoto.com" target="_blank">Ryu Yamamoto</a></p>
+        <p>The project is a collaboration between <a href="http://orgonomyproductions.info" target="_blank">Leonardo Amico</a> and <a href="http://ryu-yamamoto.com" target="_blank">Ryu Yamamoto</a>. <br> For more information, drop us <a href="mailto:hello@messagebox.info?Subject=Hello" target="_top">a letter</a>.</p>
         
         <div class="footer">
           <p> &copy;  Fabrica 2015. Website by <a href="http://www.sarahriazati.com" target="_blank">Sarah Riazati</a>. Photographs by <a href="http://www.shekpokwan.com" target="_blank">Shek Po Kwan</a>. Illustrations by <a href="http://www.ferreolbabin.fr"  target="_blank">Ferréol Babin</a>. Modeling by <a href="http://www.marlenewolfmair.com" target="_blank">Marlene Wolfmair</a>.</p>
