--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <meta property="og:url" content="URL HERE" />
   <meta property="og:image" content="LINK TO MB IMAGE" />
   <meta property="og:description" content="The Message Box is a design experiment in memory and time, from Fabrica researchers Leonardo Amico & Ryu Yamamoto." />
+
+  <!-- favicon -->
+  <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
 <head>
 
   
