Update meta tags for social networks

--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
   <link href="css/global.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
   <title>Message Box - A design experiment with memory and time</title>
-  <meta name="description" content="The Message Box is a design experiment in memory and time, from Fabrica researchers Leonardo Amico & Ryu Yamamoto.">
+  <meta name="description" content="The Message Box is a design experiment in memory and time, from Fabrica researchers Leonardo Amico &amp; Ryu Yamamoto.">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" value="summary">
 
-  <!-- Open Graph data -->
-  <meta property="og:site_name" content="Message Box" />
-  <meta property="og:title" content="Message Box" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="URL HERE" />
-  <meta property="og:image" content="LINK TO MB IMAGE" />
-  <meta property="og:description" content="The Message Box is a design experiment in memory and time, from Fabrica researchers Leonardo Amico & Ryu Yamamoto." />
+
+  <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Message Box">
+    <meta name="twitter:description" content="A design experiment in memory and time, from Fabrica researchers Leonardo Amico &amp; Ryu Yamamoto.">
+    <meta name="twitter:image" content="http://www.messagebox.info/img/mb_c.jpg">
+    <meta name="twitter:url" content="http://www.messagebox.info" />
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Message Box" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.messagebox.info" />
+    <meta property="og:image" content="http://www.messagebox.info/img/mb_c.jpg" />
+    <meta property="og:description" content="A design experiment in memory and time, from Fabrica researchers Leonardo Amico &amp; Ryu Yamamoto." />
 
   <!-- favicon -->
   <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
